Started working on criteria bar and joining socket and channel

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "semantic-ui-react": "^0.71.3"
   },
   "devDependencies": {
