--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "semantic-ui-react": "^0.71.3"
+    "semantic-ui-react": "^0.75.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
