--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^1.0.0",
+    "phoenix": "^1.3.0",
     "react": "^15.6.1",
+    "react-countdown-clock": "^2.0.0",
     "react-dom": "^15.6.1",
     "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
