Added Google analytics and request plumbing

--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://esow.github.io/LoL_Buddy_Frontend"
+  "homepage": "https://esow.github.io/LoL_Buddy_Frontend",
+  "proxy": "https://lolbuddy.herokuapp.com"
 }
