--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "gh-pages": "^1.0.0",
     "phoenix": "^1.3.0",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-countdown-clock": "^2.0.0",
     "react-dom": "^15.6.1",
     "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-web-notification": "^0.3.1",
     "semantic-ui-react": "^0.75.1"
   },
   "devDependencies": {
