--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://buddy.gg",
+  "homepage": "https://esow.github.io/LoL_Buddy_Frontend/",
   "proxy": "https://lolbuddy.herokuapp.com"
 }
