--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "gh-pages": "^1.0.0",
     "phoenix": "^1.3.0",
     "react": "^15.6.2",
-    "react-scripts": "1.0.17",
     "react-countdown-clock": "^2.0.0",
     "react-dom": "^15.6.1",
     "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
     "react-web-notification": "^0.3.1",
     "semantic-ui-react": "^0.75.1"
   },
