--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^1.0.0",
+    "lodash": "^4.17.5",
     "phoenix": "^1.3.0",
     "react": "^15.6.2",
     "react-countdown-clock": "^2.0.0",
-    "react-dom": "^15.6.1",
+    "react-dom": "^15.6.2",
     "react-fontawesome": "^1.6.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -24,5 +25,14 @@
     "deploy": "gh-pages -d build"
   },
   "homepage": "https://buddy.gg",
-  "proxy": "https://lolbuddy.herokuapp.com"
+  "proxy": "https://lolbuddy.herokuapp.com",
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.1.1",
+    "eslint-config-react-app": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.34.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0"
+  }
 }
