--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://esow.github.io/LoL_Buddy_Frontend/",
+  "homepage": "https://buddy.gg",
   "proxy": "https://lolbuddy.herokuapp.com",
   "devDependencies": {
     "babel-eslint": "^7.2.3",
